Registrar carro [DONE]

--- a/novo_carro.html
+++ b/novo_carro.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>IRodizio</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,24 +42,10 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-
-
-
-
-
-
-
-
-
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-
-
-
-
-
-<h2>Adicionar Carro</h2>
+    <p class="header">Adicionar Carro</p>
 
   <div class="row">
     <div class="col-md-6">
@@ -76,19 +62,19 @@
                         <label class="registro-carro-label">
                             Placa
                         </label>
-                        <input  class="form-control input-md" type="text"/>
+                        <input  class="form-control input-md input-novo-carro" type="text"/>
                     </div>
                     <div class="col-md-4">
                         <label class="registro-carro-label">
                             Modelo
                         </label>
-                        <input  class="form-control input-md" type="text"/>
+                        <input  class="form-control input-md input-novo-carro" type="text"/>
                     </div>
                     <div class="col-md-4">
                         <label class="registro-carro-label">
                             Ano
                         </label>
-                        <input class="form-control input-md" type="text"/>
+                        <input class="form-control input-md input-novo-carro" type="text"/>
                     </div>
                 </div>
                 <button class="btn btn-registrar-carro btn-primary">Registrar carro</button>
@@ -98,11 +84,6 @@
 
     </div>
   </div>
-
-
-
-
-
         </div>
       </div>
       <hr>
@@ -112,7 +93,7 @@
       </footer>
     </div>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-      <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+      <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
   </body>
 </html>
