--- a/index.html
+++ b/index.html
@@ -21,18 +21,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">IRodizio</a>
+          <a class="navbar-brand" href="#">
+
+            <span>IRodizio :: Minhas Visitas</span>
+          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="#">
-              <span class="badge pull-right">42</span>
               Meus Carros
             </a></li>
             <li><a href="#">Adicionar Carro</a></li>
-            <li class="active"><a href="#">Minhas Visitas</a></li>
+            <li class="active"><a href="#">
+              <span class="badge pull-right badge-warning">4</span>
+              Minhas Visitas</a></li>
             <li><a href="#">Agendar Visita</a></li>
             <li><a href="#">Rotas Alternativas</a></li>
 
@@ -43,41 +47,36 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-
-
-
-
-
-
-
-
     <div class="container">
       <div class="row">
         <div class="col-md-12">
+          <div class="list-group">
+            <a href="#" class="list-group-item active">
+              <h4 class="list-group-item-heading">BTS-0098</h4>
+              <span>09/09</span>
+              <span>12:00</span>
+              <p class="list-group-item-text">
+                Itavema france - Pinheiros
+              </p>
+            </a>
 
-
-
-
-
-<h2>Minhas Visitas</h2>
-
-  <div class="row">
-    <div class="col-md-6">
-
-      <ul class="list-group">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
-    </div>
-  </div>
-
-
-
-
-
+            <a href="#" class="list-group-item ">
+              <h4 class="list-group-item-heading">KAR-0013</h4>
+              <span>09/09</span>
+              <span>12:00</span>
+              <p class="list-group-item-text">
+                Itavema france - itaim
+              </p>
+            </a>
+            <a href="#" class="list-group-item">
+              <h4 class="list-group-item-heading">ALV-1114</h4>
+              <span>09/09</span>
+              <span>12:00</span>
+              <p class="list-group-item-text">
+                Itavema france - Faria Lima
+              </p>
+            </a>
+          </div>
         </div>
       </div>
       <hr>
