--- a/meus_carros.html
+++ b/meus_carros.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>IRodizio</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+      <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,11 +34,11 @@
               <span class="badge pull-right badge-warning">2</span>
               Meus Carros
             </a></li>
-            <li><a href="#">Adicionar Carro</a></li>
+            <li><a href="novo_carro.html">Adicionar Carro</a></li>
             <li><a href="#">
 
               Minhas Visitas</a></li>
-            <li><a href="#">Agendar Visita</a></li>
+            <li><a href="agenda_visitas.html">Agendar Visita</a></li>
             <li><a href="#">Rotas Alternativas</a></li>
 
           </ul>
@@ -71,7 +71,7 @@
       </footer>
     </div>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-      <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+      <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
   </body>
 </html>
