--- a/meus_carros.html
+++ b/meus_carros.html
@@ -52,8 +52,9 @@
       <div class="row">
         <div class="col-md-12">
           <div class="list-group">
-            <a href="#" class="list-group-item">
+            <a href="diagnostico.html" class="list-group-item">
               <h4 class="list-group-item-heading">BTS-0098</h4>
+              <span class="badge pull-right alert-danger">4</span>
               <span>Fluence</span>
             </a>
             <a href="#" class="list-group-item">
