--- a/registrar.html
+++ b/registrar.html
@@ -71,33 +71,21 @@
                                            type="password" maxlength="100">
                                 </div>
                             </div>
-
-
-
-
-
                             <div class="form-group">
                                 <span class="col-md-2 col-md-offset-0 "></span>
                                 <div class="col-md-4">
-                                    <button type="button" id="btn_registrar" class="btn btn-primary   btn-larges">
+                                    <button type="button" id="btn_registrar" class="btn btn-primary btn-larges">
                                         Registrar
                                     </button>
 
                                     <hr />
                                     <a href='login.html' class="btn btn-default  btn-large"> Login </a>
-
-
                                 </div>
                             </div>
 
                         </form>
                     </div>
                 </div>
-
-
-
-
-
             </div>
         </div>
         <hr>
@@ -114,6 +102,15 @@
         $("#btn_registrar").on('click', function () {
             var btn = $(this);
             btn.button('loading');
+
+            if ($('#username').val() == '' ||
+                $('#email').val() == '' ||
+                $('#password').val() == '' ||
+                $('#telefone').val() == '')
+            {
+                $('#pWebApiBasicResultado').html('<div class="alert alert-danger" role="alert">Informe todos os campos</div>');
+                return;
+            }
 
             var parameters = "username=".concat($('#username').val());
             parameters += "&email=".concat($('#email').val());
